<resources>
    <string name="app_name">Jianyi</string>
    <string name="transition_avatar">avatar</string>
    <string name="transition_username">username</string>
    <string name="transition_school">school</string>
    <string name="transition_reveal_view">reveal_view</string>
    <string name="fake">"厉害了 我的哥"</string>
    <string name="action_login">登录</string>
    <string name="hint_forget_password">忘记密码</string>
    <string name="hint_input_password">输入密码</string>
    <string name="hint_input_user_name">用户名</string>
    <string name="activity_sign_in">登录</string>
    <string name="action_alright">好的</string>
    <string name="login_succeed">登录成功</string>
    <string name="plz_login">请先登录</string>
    <string name="share_intent_prefix">我在简易上找到了</string>
    <string name="share_intent_hint">想把它分享到…</string>
    <string name="post_hint_title">标题</string>
    <string name="post_hint_details">详情</string>
    <string name="post_hint_price">价格</string>
    <string name="action_post">发布</string>
    <string name="activity_post_goods">发布闲置</string>
    <string name="post_need_hint_description">你想要什么?</string>
    <string name="post_need_hint_tel">联系方式</string>
    <string name="activity_post_need">发布需求</string>
    <string name="hint_post_succeed">发布成功</string>
    <string name="hint_post_failed">发布失败</string>
    <string name="select_school">选择学校</string>
    <string name="player_post_count">发布 %d</string>
    <string name="player_like_count">收藏 %d</string>
    <string name="action_share">分享</string>
    <string name="hint_exception">未知的错误</string>
    <string name="search_for">搜索: %s</string>
    <string name="hint_fail_to_get_user_info">获取用户信息失败</string>
    <string name="hint_login_first">请先登录</string>
    <string name="hint_send_to">\@\ </string>
    <string name="action_send">发送</string>
    <string name="action_cancel">取消</string>
    <string name="hint_empty_content">说点什么啊</string>
    <string name="hint_permission_denied">操作未被允许</string>
    <string name="jianyi">简易</string>
</resources>
