<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.sinyuk.jianyi.widgets.RatioImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_reveal_view"
        app:ratio="0.5"/>

    <com.sinyuk.jianyi.widgets.MyCircleImageView
        android:id="@+id/avatar"
        style="@style/avatar_border"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="-76dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_avatar"
        android:visibility="gone"
        tools:src="@drawable/boy"/>

    <EditText
        android:id="@+id/user_name_tv"
        style="@style/player_edit_text"
        android:textSize="@dimen/material_text_display2"
        android:textStyle="bold"
        android:transitionName="@string/transition_username"
        android:visibility="gone"
        tools:text="乔昔之"/>

    <EditText
        android:id="@+id/school_tv"
        style="@style/player_edit_text"
        android:layout_marginTop="@dimen/content_space_2"
        android:textColor="@color/text_secondary_dark"
        android:textSize="@dimen/material_text_caption1"
        android:transitionName="@string/transition_school"
        android:visibility="gone"
        tools:text="浙江传媒学院"/>

    <TextView
        android:id="@+id/login_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="-20dp"
        android:gravity="center"
        android:text="只有登录才知道的世界"
        android:textColor="@color/text_secondary_dark"
        android:textSize="@dimen/material_text_body1"
        android:textStyle="bold"
        android:visibility="gone"/>


    <Button
        android:id="@+id/inbox_btn"
        style="@style/guillotine_menu_text"
        android:layout_marginTop="@dimen/content_space_16"
        android:drawableLeft="@drawable/notice"
        android:text="我的消息"/>

    <Button
        android:id="@+id/profile_btn"
        style="@style/guillotine_menu_text"
        android:drawableLeft="@drawable/profile"
        android:text="个人中心"/>

    <Button
        android:id="@+id/logout_btn"
        style="@style/guillotine_menu_text"
        android:drawableLeft="@drawable/ic_close_circle"
        android:text="退出登录"/>

</LinearLayout>


