<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sinyuk.jianyi.ui.player.PlayerActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@color/colorPrimaryDark"
            app:titleEnabled="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">


                <com.sinyuk.jianyi.widgets.RatioImageView
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:scaleType="centerCrop"
                    android:src="@color/grey_300"
                    android:transitionName="@string/transition_reveal_view"
                    app:ratio="0.5"/>

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="98dp"
                    android:layout_height="98dp"
                    android:layout_alignBottom="@+id/background"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-24dp"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_avatar"
                    tools:src="@drawable/ic_profile"/>

                <EditText
                    android:id="@+id/user_name_tv"
                    style="@style/player_edit_text"
                    android:layout_below="@+id/avatar"
                    android:layout_marginTop="28dp"
                    android:textSize="@dimen/material_text_display2"
                    android:textStyle="bold"
                    android:transitionName="@string/transition_username"
                    tools:text="乔昔之"/>

                <EditText
                    android:id="@+id/school_tv"
                    style="@style/player_edit_text"
                    android:layout_below="@+id/user_name_tv"
                    android:layout_marginTop="@dimen/content_space_2"
                    android:textColor="@color/grey_600"
                    android:textSize="@dimen/material_text_caption1"
                    android:transitionName="@string/transition_school"
                    tools:text="浙江传媒学院"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_below="@+id/school_tv"
                    android:layout_marginTop="@dimen/content_space_16"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/post_tab"
                        style="@style/player_tab_text"
                        android:drawableTop="@drawable/ic_goods"
                        android:text="发布 123"/>


                    <Button
                        android:id="@+id/like_tab"
                        style="@style/player_tab_text"
                        android:drawableTop="@drawable/ic_goods_favor"
                        android:text="收藏 0"/>
                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/immersive_toolbar"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/back_iv"
                    style="@style/toolbar_button"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_back"/>

                <ImageView
                    android:id="@+id/action_iv"
                    style="@style/toolbar_button"
                    android:layout_gravity="end"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FAB.Large"
        android:layout_gravity="bottom|end"/>
</android.support.design.widget.CoordinatorLayout>