<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.detail.DetailActivity">

    <data>

        <variable
            name="goods"
            type="com.sinyuk.jianyi.data.goods.Goods"/>

        <import type="android.view.View"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:overScrollMode="never">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/transition_reveal_view">

                    <com.sinyuk.jianyi.widgets.RatioImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        app:ratio="0.618"/>

                    <android.support.v4.view.ViewPager
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:background="#ccc"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@drawable/immersive_toolbar"/>
                </FrameLayout>


                <include
                    layout="@layout/activity_detail_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_space_16"
                    android:layout_marginRight="@dimen/content_space_16"
                    android:layout_marginTop="@dimen/content_space_8"
                    app:goods="@{goods}"/>


                <include
                    layout="@layout/common_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="@dimen/content_space_16"
                    android:layout_marginRight="@dimen/content_space_16"
                    android:layout_marginTop="@dimen/content_space_16"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_space_16"
                    android:layout_marginRight="@dimen/content_space_16"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/detail_actions_layout">

                        <ImageView
                            android:id="@+id/like_iv"
                            style="@style/detail_action_button"
                            android:src="@drawable/ic_like_full_24dp_grey"/>

                        <TextView
                            android:id="@+id/like_count"
                            style="@style/detail_action_text"
                            tools:text="12 喜欢"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/detail_actions_layout">

                        <ImageView
                            android:id="@+id/view_count_iv"
                            style="@style/detail_action_button"
                            android:src="@drawable/ic_views"
                            tools:text="33 views"/>

                        <TextView
                            android:id="@+id/view_count"
                            style="@style/detail_action_text"
                            tools:text="12 看过"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/detail_actions_layout">

                        <ImageView
                            android:id="@+id/share_iv"
                            style="@style/detail_action_button"
                            android:src="@drawable/ic_share_avd"/>

                        <TextView
                            android:id="@+id/share_tv"
                            style="@style/detail_action_text"
                            android:text="@string/action_share"/>
                    </LinearLayout>


                </LinearLayout>

                <include
                    layout="@layout/common_list_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/content_space_16"
                    android:layout_marginLeft="@dimen/content_space_16"
                    android:layout_marginRight="@dimen/content_space_16"
                    android:layout_marginTop="@dimen/content_space_8"/>

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_space_16"
                    android:layout_marginRight="@dimen/content_space_16"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.05"
                    android:text="@{goods.detail}"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp"
                    tools:text="@string/fake"/>


                <TextView
                    android:id="@+id/school_extra"
                    style="@style/detail_extras"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/content_space_2"
                    android:layout_marginTop="@dimen/content_space_8"
                    android:paddingLeft="@dimen/content_space_16"
                    android:paddingRight="@dimen/content_space_16"
                    tools:text="\@\浙江传媒学院"/>

                <TextView
                    android:id="@+id/price_extra"
                    style="@style/detail_extras"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/content_space_16"
                    android:paddingLeft="@dimen/content_space_16"
                    android:paddingRight="@dimen/content_space_16"
                    android:textColor="@color/themeRed"
                    tools:text="100,0"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comments_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/window_background"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:listitem="@layout/comment_list_item"/>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:background="@null"
                app:contentInsetStart="0dp">

                <ImageView
                    android:id="@+id/back_btn"
                    style="@style/toolbar_button"
                    android:onClick="onBack"
                    android:src="@drawable/ic_back"/>

                <TextView
                    android:id="@+id/toolbar_title_tv"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_space_16"
                    android:layout_marginRight="72dp"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:text="@{goods.name}"
                    android:textColor="@color/white"
                    tools:text="Titldsadsadfdsfdsfdsfdsfdsfdsfdssfdssadsadsadsadsadsae"/>

                <ImageView
                    android:id="@+id/search_btn"
                    style="@style/toolbar_button"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_search_white_24dp"/>
            </android.support.v7.widget.Toolbar>

        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>
